--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "@expo-google-fonts/space-grotesk": "^0.2.2",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.3",
-    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.2.1",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "apisauce": "2.1.5",
     "date-fns": "^2.29.2",
     "expo": "~46.0.17",
@@ -67,6 +68,7 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.4",
     "react-native-screens": "3.15.0",
+    "react-native-snap-carousel": "^3.9.1",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.3"
