--- a/app.json
+++ b/app.json
@@ -48,7 +48,8 @@
         "image": "./assets/images/splash-logo-web.png",
         "resizeMode": "contain",
         "backgroundColor": "#191015"
-      }
+      },
+      "userInterfaceStyle":"automatic"
     }
   }
 }
