create AccountCard more styles

--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
         "image": "./assets/images/splash-logo-android-universal.png",
         "resizeMode": "contain",
         "backgroundColor": "#191015"
-      }
+      },
+      "userInterfaceStyle": "automatic"
     },
     "ios": {
       "icon": "./assets/images/app-icon-ios.png",
