--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@react-navigation/stack": "~6.2.1",
     "@types/react-native-snap-carousel": "^3.8.5",
     "apisauce": "2.1.5",
+    "axios": "^1.2.2",
     "date-fns": "^2.29.2",
     "expo": "~46.0.17",
     "expo-application": "~4.2.2",
@@ -88,6 +89,7 @@
     "@types/react-native": "0.67.8",
     "@typescript-eslint/eslint-plugin": "5.28.0",
     "@typescript-eslint/parser": "5.28.0",
+    "axios-mock-adapter": "^1.21.2",
     "babel-jest": "26.6.3",
     "babel-loader": "8.2.5",
     "detox": "19.12.1",
