--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@expo-google-fonts/space-grotesk": "^0.2.2",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.3",
-    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.2.1",
@@ -67,7 +67,7 @@
     "react-native-bootsplash": "4.3.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.4",
+    "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "3.15.0",
     "react-native-snap-carousel": "^3.9.1",
     "reactotron-mst": "3.1.4",
